# ai-orchestration-pipeline

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  litellm_config.yaml  pyproject.toml
.harness/: Build_hugefisco94_ai_orchestration_pipeline_1772071316984-pr-trigger-input-set-1772071319409.yaml  Build_hugefisco94_ai_orchestration_pipeline_1772071316984-push-trigger-input-set-1772071321413.yaml
.harness/pipelines/: ai-orchestration-pipeline-1772071312147.yaml
examples/: basic_query.py  claude_code_config.json  consensus.py  pipeline.py
src/swarm_router/: __init__.py  cli.py  config.py  health.py  mcp_bridge.py  orchestrator.py  swarm.py
